--- a/mscore/manual/sources/MuseScore-da.html
+++ b/mscore/manual/sources/MuseScore-da.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_4d79e02fa6701f1ccb067cf07f88b794.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_0732776b9364d99d1ed4498937572b9b.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"da"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/da/h%C3%A5ndbog/h%C3%A5ndbog' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Gratis software til komposition og nodeskrivning</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/da">http://musescore.org</a> on man, 03/12/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/da">http://musescore.org</a> on lør, 08/11/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -403,13 +403,19 @@ Når du forlader <samp class="mode">redigeringstilstand</samp>, opdateres alle n
 <div id="node-6905" class="section-3">
   <h1 class="book-heading">Bjælker</h1>
   <p><strong>Bjælker</strong> indsættes automatisk, men den automatiske funktion kan erstattes af en manuel.. Træk et bjælkesymbol fra paletten "Bjælke egenskaber" til en node for at ændre bjælketype.<br />
-<img src="/sites/musescore.org/files/beam-palette.png" alt="Paletten &quot;Bjælke egenskaber&quot;" title="Paletten &quot;Bjælke egenskaber&quot;" width="135" height="64" class="inline" /></p>
+<img src="/sites/musescore.org/files/beam-palette_0.png" alt="Paletten &quot;Bjælke egenskaber&quot;" title="Paletten &quot;Bjælke egenskaber&quot;" width="135" height="60" class="inline" /></p>
 <p>Du kan også først vælge en node og så dobbeltklikke på et passende symbol i paletten "Bjælke egenskaber".<br />
 <img src="/sites/musescore.org/files/beambutton1_0.png" alt="Indled bjælke" title="Indled bjælke" width="29" height="28" class="inline" /> Bjælken begynder på denne node.<br />
 <img src="/sites/musescore.org/files/beambutton2_0.png" alt="Midt eller inde i bjælke" title="Midt eller inde i bjælke" width="29" height="28" class="inline" /> Bjælken fortsætter på denne node.<br />
 <img src="/sites/musescore.org/files/beambutton3_0.png" alt="Ingen bjælke" title="Ingen bjælke" width="29" height="28" class="inline" /> Ingen bjælke på denne node.<br />
 <img src="/sites/musescore.org/files/beambutton4_1.png" alt="Nyt niveau for bjælke" title="Nyt niveau for bjælke" width="29" height="28" class="inline" /> Nyt bjælkeniveau fra denne node (ikke tilgængelig i nærværende version af MuseScore). </p>
 <p>Se også: <a href="http://musescore.org/da/håndbog/bjælker-på-tværs-af-nodesystemer" title="Bjælker på tværs af nodesystemer">Bjælker på tværs af nodesystemer</a></p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bilag</th><th>Størrelse</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 kB</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-6906" class="section-3">
   <h1 class="book-heading">Klammer</h1>
@@ -724,6 +730,12 @@ Ved at klikke på knappen "Start eller stop afspilning" <img src="/sites/musesco
 <p><strong class="label">For programversion 0.9.5 eller tidligere versioner:</strong> Hvis du ønsker at afspille med andet end klaverlyd, skal du udskifte MuseScores integrerede standard-lydbibliotek (eng: SoundFont) med et udvidet lydbibliotek via menubjælken: <kbd><samp class="menu">Rediger</samp> → <samp class="menuitem">Indstillinger...</samp> → <samp class="tab">Fanebladet "I/O"</samp></kbd>. Se <a href="http://musescore.org/da/freelinking/Lydbiblioteket" class="freelinking noexist" rel="nofollow">Lydbiblioteket</a> for yderligere vejledning.</p>
 <h4>Lyd på Ubuntu</h4>
 <p>Hvis du har problemer med lyd på Ubuntu, anbefales det at opgradere til MuseScore version 0.9.5 eller en senere version. På MuseScores downloadside kan du finde flere oplysninger om, hvor og hvordan du henter de seneste udgivelser af programmet. Hvis du fortsat har problemer, er du velkommen til at benytte sitets debatfora.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bilag</th><th>Størrelse</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-6961" class="section-3">
   <h1 class="book-heading">Lydbiblioteker</h1>
