--- a/mscore/manual/sources/MuseScore-es.html
+++ b/mscore/manual/sources/MuseScore-es.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_a8b218e39fd0bdd9908f3393e4acfbff.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_5ccc5883db857d59a2f2e4b8e74d7049.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"es"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/es/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Programa libre de notación musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Lun, 03/12/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Sáb, 08/11/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -513,6 +513,12 @@ Todas las barras de la partitura se actualizarán al abandonar el <samp class="m
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/agrupacion.png" type="image/png; length=5220">agrupacion.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Adjunto</th><th>Tamaño</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-144" class="section-3">
   <h1 class="book-heading">Corchete</h1>
@@ -577,7 +583,7 @@ Todas las barras de la partitura se actualizarán al abandonar el <samp class="m
 <li>Escoge una nota o silencio en el pentagrama de percusión. Por favor, ten en cuenta que la paleta de percusión permanecerá vacía hasta que hayas completado este paso.</li>
 <li>Presiona "N" para iniciar  el modo de introducción de notas</li>
 <li>Escoge una duración de la barra de herramientas del modo de introducción de notas</li>
-<li>Escoge un tipo de nota (como bombo o caja) de la <a href="http://musescore.org/cs/paleta" title="paleta">paleta</a> de percusión</li>
+<li>Escoge un tipo de nota (como bombo o caja) de la <a href="http://musescore.org/sk/paleta" title="paleta">paleta</a> de percusión</li>
 <li>Presiona en el pentagrama de percusión para añadir la nota a la partitura</li>
 </ol>
 <h3>External links</h3>
@@ -903,6 +909,12 @@ Para crear un silencio de compás marca el compás y presiona <kbd><kbd>Supr</kb
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/play_panel.png" type="image/png; length=288857">play_panel.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Adjunto</th><th>Tamaño</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-247" class="section-3">
   <h1 class="book-heading">SoundFont</h1>
@@ -1009,6 +1021,23 @@ Si la reproducción se oye de manera entrecortada se debe a que tu ordenador no 
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/mezclador.png" type="image/png; length=234737">mezclador.png</a></div>        </div>
         </div>
 </div>
+  </div>
+<div id="node-11692" class="section-3">
+  <h1 class="book-heading">Dinámicas</h1>
+  <p>El volumen para la pieza completa se puede modificar mediante el panel de reproducción. También puede alterarse de forma localizada mediante Indicaciones Dinámicas en la partitura.</p>
+<h3>Panel de Reproducción</h3>
+<ul>
+<li>Mostrar el Panel de Reproducción: <kbd><samp class="menu">Mostrar</samp> → <samp class="menuitem">Panel de Reproducción</samp></kbd></li>
+<li>Cambia el Volumen deslizando la barra pertinente</li>
+</ul>
+<h3>Indicaciones Dinámicas</h3>
+<p>Desde la paleta de Dinámicas, arrastra el texto apropiado a un compás de la partitura.</p>
+<h4>Ajustando el volumen de reproducción para una Indicación Dinámica</h4>
+<ul>
+<li> Pulsa con el botón derecho sobre la Indicación Dinámica para abrir el menú</li>
+<li> Selecciona "Propiedades del MIDI".</li>
+<li> Ajusta el número que aparece en la casilla "Velocidad". Cuanto mayor sea el número, más fuerte se tocará el pasaje.</li>
+</ul>
   </div>
 </div>
 <div id="node-882" class="section-2">
