--- a/mscore/manual/sources/MuseScore-fi.html
+++ b/mscore/manual/sources/MuseScore-fi.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_613c8a0de770acbc82a95da1e3175839.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_e8b18d03741d3404e43ba389d1e16f60.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"fi"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/fi/k%C3%A4sikirja/k%C3%A4sikirja' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Ilmainen musiikin sävellys & nuotinnusohjelma</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/fi">http://musescore.org</a> on Ma, 03/12/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/fi">http://musescore.org</a> on La, 08/11/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -549,6 +549,12 @@ Kahvojen siirtäminen pelkästään oikealla tai vasemmalla nuolinäppäimellä 
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/beampalette-fi.png" type="image/png; length=3043">beampalette-fi.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Liite</th><th>Koko</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 Kt</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-1200" class="section-3">
   <h1 class="book-heading">Rumpunotaatio</h1>
@@ -832,6 +838,12 @@ Painamalla Toisto <img src="/sites/musescore.org/files/play.png" alt="Toista" ti
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/playpanel-fi.png" type="image/png; length=12353">playpanel-fi.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Liite</th><th>Koko</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 tavua</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-1182" class="section-3">
   <h1 class="book-heading">SoundFont (äänifontti)</h1>
