--- a/mscore/manual/sources/MuseScore-hu.html
+++ b/mscore/manual/sources/MuseScore-hu.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_e80ebc3ddda71862fa5aad7aeaf90a74.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_51126b78158cb291e0e9a87eb4d172f8.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"hu"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/hu/k%C3%A9zik%C3%B6nyv/k%C3%A9zik%C3%B6nyv' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Ingyenes zeneszerző & kottaszerkesztő szoftver</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/hu">http://musescore.org</a> on 2012. 03. 12. h</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/hu">http://musescore.org</a> on 2012. 08. 11. szo</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -395,13 +395,19 @@ A <samp class="mode">szerkesztés mód</samp> elhagyásakor az összes ütemvona
   <h1 class="book-heading">Gerenda</h1>
   <h3>Automatikus gerendák a MuseScore-ban</h3>
 <p><strong>A gerendákat</strong>  a program automatikusan megrajzolja, de az automatikus beállításokat kézzel bármikor felülbírálhatod. A gerenda eszköztárból húzz le egy gerenda típust arra a hangra, amelynek a gerendáját meg szeretnéd változtatni.</p>
-<p><img src="/sites/musescore.org/files/beam-palette.png" alt="Gerenda eszköztár" title="Gerenda eszköztár" width="135" height="64" class="inline" /></p>
+<p><img src="/sites/musescore.org/files/beam-palette_0.png" alt="Gerenda eszköztár" title="Gerenda eszköztár" width="135" height="60" class="inline" /></p>
 <p>Ugyanezt úgy is elérheted, hogy először rákattintasz az adott hangra, azután pedig a gerenda eszköztáron dupla kattintással kiválasztod a kívánt típust a következők szerint:</p>
 <p><img src="/sites/musescore.org/files/beambutton1_0.png" alt="Start beam button" title="Start beam button" width="29" height="28" class="inline" /> Ez legyen a gerenda első hangja.<br />
 <img src="/sites/musescore.org/files/beambutton2_0.png" alt="Middle of beam button" title="Middle of beam button" width="29" height="28" class="inline" /> Ne legyen ez a gerenda utolsó hangja.<br />
 <img src="/sites/musescore.org/files/beambutton3_0.png" alt="No beam button" title="No beam button" width="29" height="28" class="inline" /> Ez a hang ne tartozzon gerendához.<br />
 <img src="/sites/musescore.org/files/beambutton4_1.png" alt="Second level beam button" title="Second level beam button" width="29" height="28" class="inline" /> Ez legyen a következő szintű gerenda első hangja (még nem elérhető a Musescore jelenlegi verzióiban). </p>
 <p>Lásd még: <a href="http://musescore.org/hu/kézikönyv/sorokon-átívelő-gerendák" title="Sorokon átívelő gerendák">Sorokon átívelő gerendák</a></p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Csatolmány</th><th>Méret</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-4368" class="section-3">
   <h1 class="book-heading">Cezúra és szünet</h1>
@@ -696,6 +702,12 @@ A lejátszás <img src="/sites/musescore.org/files/play.png" alt="Lejátszás" t
 <p><strong class="label">A 0.9.5 vagy korábbi verziók esetén:</strong> Amennyiben nem csak zongora, hanem más hangszer hangját is akarod hallani lejátszáskor, akkor a MuseScore eredetileg beépített hangminta készletét egy bővebbre kell cserélned a <kbd><samp class="menu">Szerkesztés</samp> → <samp class="menuitem">Beállítások...</samp> → <samp class="tab">I/O</samp></kbd> fülön. Lásd a <a href="http://musescore.org/hu/kézikönyv/hangminta-készlet" title="Hangminta készlet">Hangminta készlet</a> fejezet utasításait.</p>
 <h4>Hang Ubuntu alatt</h4>
 <p>Amennyiben problémád van az Ubuntu alatti lejátszással, akkor javasoljuk, hogy frissíts a 0,9,5 vagy későbbi verzióra. A legutóbbi kiadás megszerzésére vonatkozó információkat megtalálod honlapunk "letöltés" oldalán. Ha bármilyen további problémád van, használd a fórumokat.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Csatolmány</th><th>Méret</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 byte</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-4369" class="section-3">
   <h1 class="book-heading">Tempó</h1>
