--- a/mscore/manual/sources/MuseScore-nl.html
+++ b/mscore/manual/sources/MuseScore-nl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_59f46745d58e723ce848c4d612fd7f89.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_56c7dad3328bcc413dea82ad78470ed9.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"nl"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/nl/handboek/handboek' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Gratis muzieknotatiesoftware</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op ma, 12/03/2012</div>
+    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op za, 11/08/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -233,7 +233,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 </ul>
 <p>Noten zijn ingevoerd door: <kbd><kbd>C</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>E</kbd></kbd> <kbd><kbd>F</kbd></kbd> <kbd><kbd>G</kbd></kbd> <kbd><kbd>A</kbd></kbd> <kbd><kbd>B</kbd></kbd> <kbd><kbd>C</kbd></kbd><br />
 <img src="/sites/musescore.org/files/noteentry1_0.png" alt="Notes: C, D, E, F, G, A, B, C" title="Notes: C, D, E, F, G, A, B, C" width="430" height="82" class="inline" /></p>
-<p><kbd><kbd>0</kbd></kbd> creëert een rust: <kbd><kbd>C</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>0</kbd><kbd>E</kbd></kbd><br />
+<p><kbd><kbd>0</kbd></kbd> creëert een rust, bijvoorbeeld <kbd><kbd>C</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>0</kbd><kbd>E</kbd></kbd><br />
  Opmerking: de duur die u kiest voor noten (kwart) zoals in dit voorbeeld ook bepalend voor de duur van de rust (kwartrust).<br />
 <img src="/sites/musescore.org/files/noteentry2_0.png" alt="C, D, rest, E" title="C, D, rest, E" width="237" height="59" class="inline" /></p>
 <p>Van noten een akkoord maken door<br />
@@ -716,15 +716,16 @@ Wanneer je de handvatten beweegt, wordt er een stippellijn van de verschuivende 
   <h1 class="book-heading">Voorslagen</h1>
   <p><strong>Korte voorslagen</strong> (Acciaccatura) worden weergegeven als een kleine noot met een streepje door het midden van de stok.<br />
 <strong>Lange voorslagen</strong> (Appoggiatura) hebben geen streepje. Beiden zijn geplaatst vóór de normale te spelen noot. </p>
-<p>Creëer een voorslag door een voorslag-symbool van het <a href="http://musescore.org/nl/handboek/palet" title="Palet">Palet</a> naar een noot te slepen (In versies 0.9.5 en eerder heet het palet gewoon Noten). Een voorslag kan ook toegevoegd worden door een noot te selecteren en vervolgens te dubbelklikken op een voorslag-symbool in het <a href="http://musescore.org/nl/handboek/palet" title="Palet">Palet</a>.</p>
+<h3>Instructies</h3>
+<p>Creëer een voorslag door een voorslag-symbool van het <a href="http://musescore.org/nl/handboek/palet" title="Palet">Palet</a> Voorslagen naar een noot te slepen (In versies 0.9.5 en eerder heet het palet gewoon Noten). Een voorslag kan ook toegevoegd worden door een noot te selecteren en vervolgens te dubbelklikken op een voorslag-symbool in het <a href="http://musescore.org/nl/handboek/palet" title="Palet">Palet</a> Voorslagen.</p>
 <p>Om meerdere voorslagen toe te voegen: sleep de volgende voorslagen naar de hoofdnoot. </p>
 <p>Om een voorslagen-akkoord toe te voegen: voeg eerst een voorslag toe. Selecteer deze, en gebruik Shift + de notennamen (C, D, E enz...) om de andere noten toe te voegen. </p>
-<p>Om de lengte van een voorslag te veranderen: Selecteer de voorslag en kies een nootduur met de toetsen 1....9 (Zie <a href="http://musescore.org/nl/handboek/noten-invoeren" title="noten invoeren">noten invoeren</a>). </p>
+<p>Om de lengte van een voorslag te veranderen: selecteer de voorslag en kies een nootduur met de toetsen 1....9 (Zie <a href="http://musescore.org/nl/handboek/noten-invoeren" title="noten invoeren">noten invoeren</a>). </p>
 <p><img src="/sites/musescore.org/files/korte_voorslag_nl.png" alt="Keys palette" title="Keys palette" width="169" height="81" class="inline" /></p>
 <p>Zie ook:</p>
 <ul>
 <li><a href="http://musescore.org/nl/handboek/palet" title="Palet">Palet</a></li>
-<li><a href="http://en.wikipedia.org/wiki/Grace_note">Grace note</a> op Wikipedia</li>
+<li><a href="http://nl.wikipedia.org/wiki/Voorslag_(muziek)">Voorslag (muziek)</a> op Wikipedia</li>
 </ul>
   </div>
 <div id="node-442" class="section-3">
@@ -765,6 +766,12 @@ Wanneer je de handvatten beweegt, wordt er een stippellijn van de verschuivende 
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/waardestrepen2_nl_0.png" type="image/png; length=2366">waardestrepen2_nl.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bijlage</th><th>Grootte</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-408" class="section-2">
@@ -794,6 +801,12 @@ Door op de Afspeel <img src="/sites/musescore.org/files/play.png" alt="play.png"
 <p><strong class="label">Versie 0.9.5 of eerder:</strong> Wanneer u wilt afspelen met andere instrumenten dan de piano dan moet u de MuseScore geïntegreerde SoundFont vervangen door een uitgebreidere versie <kbd><samp class="menu">Bewerk</samp> → <samp class="menuitem">Voorkeursinstellingen...</samp> → <samp class="tab">I/O</samp> tab</kbd>. Zie <a href="http://musescore.org/nl/handboek/soundfonts" title="SoundFonts">SoundFonts</a> voor instructies.</p>
 <h4>Geluid bij Ubuntu</h4>
 <p>Wanneer u problemen ondervindt met geluid onder Ubuntu, dan is het aangeraden om te upgraden naar versie 0.9.5 of hoger. Instructies voor het verkrijgen van de nieuwste release kunt u vinden op de download pagina van deze website. Wanneer u nog problemen hebt, schroom niet om de forums te gebruiken.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bijlage</th><th>Grootte</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-410" class="section-3">
   <h1 class="book-heading">SoundFonts</h1>
