--- a/mscore/manual/sources/MuseScore-pt-br.html
+++ b/mscore/manual/sources/MuseScore-pt-br.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_d0d5122ec954c00707c28e245005246d.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_ee2f7068933b63fa6a2958244d023875.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"pt-br"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/pt-br/manual-pt-br/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software livre de composição e partitura musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pt-br">http://musescore.org</a> on ter, 03/13/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pt-br">http://musescore.org</a> on sab, 08/11/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -615,6 +615,12 @@ O formato de todas as barras de compasso da pauta se atualiza quando você sai d
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/ptbr-beam-palette.png" type="image/png; length=3412">ptbr-beam-palette.png</a></div>        </div>
         </div>
 </div>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Anexo</th><th>Tamanho</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-2699" class="section-3">
   <h1 class="book-heading">Barra de ligação que cruza a pauta</h1>
@@ -960,6 +966,12 @@ Pressionando o botão Tocar <img src="/sites/musescore.org/files/play.png" alt="
 <p><strong class="label">Versão 0.9.5 ou anterior:</strong> Se quiser tocar outros instrumentos além do piano terá que trocar a SoundFont integrada do MuseScore por uma com uma maior capacidade em <kbd><samp class="menu">Editar</samp> → <samp class="menuitem">Configurações...</samp> → aba <samp class="tab">I/O</samp></kbd>. Veja <a href="http://musescore.org/pt-br/manual-pt-br/soundfont" title="SoundFont">SoundFont</a> para mais instruções.</p>
 <h4>Som no Ubuntu</h4>
 <p>Se você tiver problemas com som no Ubuntu, é recomendável que se faça a atualização para a versão 0.9.5 ou posterior. Instruções sobre como obter o último lançamento estão na página de download do portal. Se tiver maiores problemas, solicite ajuda nos fóruns.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Anexo</th><th>Tamanho</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-2763" class="section-3">
   <h1 class="book-heading">SoundFont</h1>
