--- a/mscore/manual/sources/MuseScore-ro.html
+++ b/mscore/manual/sources/MuseScore-ro.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_9771a455dcc3fe0a9b87e1d531b9e076.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_ef3bfaf2f7822a3ccc3b49621838b72b.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"ro"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/ro/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_7a9b6f1933da8fa179e4a30a4e44b0c7.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8a84b5af7ff4f142818169153ee8b726.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software gratuit pentru compoziție și notație muzicală</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ro">http://musescore.org</a> on Mar, 03/13/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ro">http://musescore.org</a> on Sâm, 08/11/2012</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -409,13 +409,19 @@ respectiv<br />
 <div id="node-4055" class="section-3">
   <h1 class="book-heading">Legătura</h1>
   <p><strong>Legăturile</strong> dintre note sînt create automat, dar ele pot fi anulate manual, atunci cînd nu sînt dorite de editorul partiturii. Executați drag / drop un simbol de legătură de pe paleta cu simboluri grafice, peste nota care doriți să o modificați (din punct de vedere al legăturii).<br />
-<img src="/sites/musescore.org/files/beam-palette.png" alt="Paleta cu legături" title="Paleta cu legături" width="135" height="64" class="inline" /></p>
+<img src="/sites/musescore.org/files/beam-palette_0.png" alt="Paleta cu legături" title="Paleta cu legături" width="135" height="60" class="inline" /></p>
 <p>Același efect se poate obține și dacă, mai întîi, selectați o notă (cu un click stînga) și apoi faceți dublu click pe simbolul corespunzător ce se găsește pe paleta cu simboluri grafice pentru legături.<br />
 <img src="/sites/musescore.org/files/beambutton1_0.png" alt="Butonul de inițiere a legăturii" title="Butonul de inițiere a legăturii" width="29" height="28" class="inline" /> Inițiază o legătură, începînd cu nota curent selectată.<br />
 <img src="/sites/musescore.org/files/beambutton2_0.png" alt="Butonul de legătură intermediară" title="Butonul de legătură intermediară" width="29" height="28" class="inline" /> Nota selectată face parte dintr-o legătură (nici nu o începe, nici nu o finalizează).<br />
 <img src="/sites/musescore.org/files/beambutton3_0.png" alt="Butonul pentru anularea legăturii" title="Butonul pentru anularea legăturii" width="29" height="28" class="inline" /> Nota curentă este desprinsă din legătură.<br />
 <img src="/sites/musescore.org/files/beambutton4_1.png" alt="Butonul pentru legătură secundară" title="Butonul pentru legătură secundară" width="29" height="28" class="inline" /> Începînd cu nota curent selectată, se inițiază o legătură secundară. </p>
 <p>Vedeți și: <a href="http://musescore.org/ro/manual/legătura-între-portative" title="Legătura între portative">Legătura între portative</a></p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Ataşament</th><th>Mărime</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-3317" class="section-3">
   <h1 class="book-heading">Acolada</h1>
@@ -687,6 +693,12 @@ Prin apăsarea butonului PLAY (<i>redare</i>) <img src="/sites/musescore.org/fil
 <p><strong class="label">Pentru versiunile MuseScore 0.9.5 sau mai vechi:</strong> Dacă doriți să redați alte instrumente decît pianul, trebuie să înlocuiți modulul SoundFont integrat în Musescore, cu unul mai performant, cu ajutorul opțiunii de meniu:  <kbd><samp class="menu">Edit</samp> → <samp class="menuitem">Preferences...</samp> → <samp class="tab">I/O</samp></kbd>. Pentru detalii suplimentare, vedeți și capitolul <a href="http://musescore.org/de/handbuch/soundfont" title="SoundFont">SoundFont</a>.</p>
 <h4>Redarea sunetului sub Ubuntu</h4>
 <p>Dacă aveți dificultăți în redarea sunetului sub sistemul de operare Ubuntu, vedeți și capitolul <a href="http://musescore.org/ro/manual/instalarea" title="Instalarea">Instalarea</a>, paragraful "Linux".</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Ataşament</th><th>Mărime</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/play-repeats_1.png">play-repeats.png</a></td><td>182 octeţi</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-4133" class="section-3">
   <h1 class="book-heading">Fișierele SoundFont</h1>
